--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     <body>
         <div id="app">
             <div class="preloader">
-                <div class="preloader-content">
+                <div class="pre-load">
+                    <span>Loading ...</span>
                 </div>
             </div>
         </div>
