--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+	<!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <link rel="icon" href="./favicon.ico">
 	<title>MIDAS APP</title>
-    <link id="theme-link" rel="stylesheet" href="<%= BASE_URL %>themes/lara-light-indigo/theme.css">
+    <!-- <link id="theme-link" rel="stylesheet" href="<%= BASE_URL %>themes/lara-light-indigo/theme.css"> -->
+
+    <link id="theme-link" rel="stylesheet" href="./themes/lara-light-indigo/theme.css">
 </head>
     <body>
         <div id="app">
